--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  xmlns:tools="http://schemas.android.com/tools"
 			  android:layout_width="match_parent"
-			  android:orientation="vertical"
 			  android:layout_height="match_parent"
+			  android:orientation="vertical"
 			  tools:context="pl.fzymek.advancedrecyclerview.activity.MainActivity">
 
-	<!--<android.support.v7.widget.RecyclerView
+	<android.support.v7.widget.RecyclerView
 		android:id="@+id/recycler"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:scrollbars="vertical"/>
--->
 </LinearLayout>
