--- a/app/src/main/res/layout/image_card.xml
+++ b/app/src/main/res/layout/image_card.xml
@@ -3,38 +3,48 @@
 <android.support.v7.widget.CardView
 	android:id="@+id/card"
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="220dp"
 	android:layout_weight="8">
 
 	<LinearLayout
-		android:orientation="vertical"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="match_parent"
+		android:orientation="vertical">
 
 		<FrameLayout
-			android:elevation="2dp"
 			android:layout_width="match_parent"
 			android:layout_height="0dp"
-			android:layout_weight="8">
+			android:layout_weight="8"
+			android:elevation="2dp">
 
-		<ImageView
-			android:id="@+id/image"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:scaleType="centerCrop"
-			android:src="@mipmap/ic_launcher"/>
+			<ProgressBar
+				android:id="@+id/progress"
+				style="?android:attr/progressBarStyleHorizontal"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_gravity="bottom"
+				android:indeterminate="false"
+				android:max="100"
+				tools:progress="25"/>
 
-		<TextView
-			android:textColor="@android:color/white"
-			android:ellipsize="end"
-			android:singleLine="true"
-			android:id="@+id/title"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_gravity="bottom"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:textSize="32sp"/>
+			<ImageView
+				android:id="@+id/image"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:scaleType="centerCrop"/>
+
+			<TextView
+				android:id="@+id/title"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_gravity="bottom"
+				android:ellipsize="end"
+				android:singleLine="true"
+				android:textAppearance="?android:attr/textAppearanceLarge"
+				android:textColor="@android:color/white"
+				android:textSize="32sp"/>
 		</FrameLayout>
 
 		<LinearLayout
@@ -43,11 +53,11 @@
 			android:orientation="horizontal">
 
 			<TextView
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:textSize="24sp"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="@string/artist"/>
+				android:text="@string/artist"
+				android:textAppearance="?android:attr/textAppearanceLarge"
+				android:textSize="24sp"/>
 
 			<TextView
 				android:id="@+id/artist"
