--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -9,7 +9,7 @@
 	<fragment
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:name="pl.fzymek.advancedrecyclerview.SettingsFragment"
+		android:name="pl.fzymek.advancedrecyclerview.fragment.SettingsFragment"
 		android:id="@+id/settings"
 		android:layout_gravity="center_horizontal" />`
 
