--- a/app/src/main/res/layout/image_card.xml
+++ b/app/src/main/res/layout/image_card.xml
@@ -61,6 +61,8 @@
 
 			<TextView
 				android:id="@+id/artist"
+				android:singleLine="true"
+				android:ellipsize="end"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:textAppearance="?android:attr/textAppearanceLarge"
