--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,19 @@
 			  android:orientation="vertical"
 			  tools:context="pl.fzymek.advancedrecyclerview.activity.MainActivity">
 
-	<android.support.v7.widget.RecyclerView
-		android:paddingLeft="@dimen/padding_left_right"
-		android:paddingRight="@dimen/padding_left_right"
-		android:id="@+id/recycler"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:scrollbars="none"/>
+	<android.support.v4.widget.SwipeRefreshLayout
+		android:id="@+id/swipe_refresh"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
+
+		<android.support.v7.widget.RecyclerView
+			android:id="@+id/recycler"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:paddingLeft="@dimen/padding_left_right"
+			android:paddingRight="@dimen/padding_left_right"
+			android:scrollbars="none"/>
+
+	</android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
