--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,13 @@
 	  xmlns:app="http://schemas.android.com/apk/res-auto"
 	  xmlns:tools="http://schemas.android.com/tools"
 	  tools:context="pl.fzymek.advancedrecyclerview.activity.MainActivity">
+	<item
+		android:title=""
+		android:id="@+id/action_refresh"
+		android:orderInCategory="0"
+		android:icon="@mipmap/ic_refresh"
+		app:actionViewClass="android.widget.ImageView"
+		app:showAsAction="always"/>
 	<item android:id="@+id/action_settings"
 		  android:title="@string/action_settings"
 		  android:orderInCategory="100"
