--- a/app/src/main/res/layout/image_card.xml
+++ b/app/src/main/res/layout/image_card.xml
@@ -3,9 +3,10 @@
 <android.support.v7.widget.CardView
 	android:id="@+id/card"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:card="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="220dp"
+	card:cardElevation="5dp"
 	android:layout_weight="8">
 
 	<LinearLayout
@@ -18,16 +19,6 @@
 			android:layout_height="0dp"
 			android:layout_weight="8"
 			android:elevation="2dp">
-
-			<ProgressBar
-				android:id="@+id/progress"
-				style="?android:attr/progressBarStyleHorizontal"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="bottom"
-				android:indeterminate="false"
-				android:max="100"
-				tools:progress="25"/>
 
 			<ImageView
 				android:id="@+id/image"
