--- a/app/src/main/res/layout/image_card.xml
+++ b/app/src/main/res/layout/image_card.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- A CardView that contains a TextView -->
 <android.support.v7.widget.CardView
-	android:id="@+id/card"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:card="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/card"
 	android:layout_width="match_parent"
 	android:layout_height="220dp"
-	card:cardElevation="5dp"
-	android:layout_weight="8">
+	android:layout_weight="8"
+	card:cardElevation="5dp">
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -52,12 +53,13 @@
 
 			<TextView
 				android:id="@+id/artist"
-				android:singleLine="true"
-				android:ellipsize="end"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:ellipsize="end"
+				android:singleLine="true"
 				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:textSize="24sp"/>
+				android:textSize="24sp"
+				tools:text="Here goes artist name"/>
 		</LinearLayout>
 
 	</LinearLayout>
