--- a/app/src/main/res/xml/authenticator.xml
+++ b/app/src/main/res/xml/authenticator.xml
@@ -3,5 +3,4 @@
 					   android:accountType="pl.fzymek.advancedrecyclerview"
 					   android:icon="@mipmap/ic_launcher"
 					   android:smallIcon="@mipmap/ic_launcher"
-					   android:label="@string/app_name"
-					   android:accountPreferences="@null"/>
+					   android:label="@string/app_name"/>
